--- a/ansible/inventory.yaml
+++ b/ansible/inventory.yaml
@@ -1,29 +1,26 @@
-k3s_test:
-  vars:
-    ansible_user: ubuntu
-  hosts:
-    k3s-test:
-      ansible_host: 192.168.64.13
-
-k3s_test_agent:
-  vars:
-    ansible_user: ubuntu
-  hosts:
-    k3s-test-agent:
-      ansible_host: 192.168.64.14
-
 k3s_control_node:
+  hosts:
+    k3s_test:
+      ansible_host: 192.168.64.13
   vars:
     ansible_user: ubuntu
-  hosts:
-    k3s_1:
-      ansible_host: 192.168.64.7
+    istio_version: 1.16.1
+    cluster_cidr: 10.10.0.0/16
+    k3s_node_token_path: /var/lib/rancher/k3s/server/node-token
+    k3s_yaml_path: /etc/rancher/k3s/k3s.yaml
+    k3s_service_path: /etc/systemd/system/k3s.service
+    kube_config_folder: ~/.kube
+    kube_config_path: ~/.kube/config
+    tmp_path: /tmp
 
 k3s_worker_nodes:
+  hosts:
+    k3s_test_agent:
+      ansible_host: 192.168.64.14
+#    k3s_3:
+#      ansible_host: 192.168.64.15
   vars:
     ansible_user: ubuntu
-  hosts:
-    k3s_2:
-      ansible_host: 192.168.64.8
-    k3s_3:
-      ansible_host: 192.168.64.9
+    k3s_service_path: /etc/systemd/system/k3s-agent.service
+    tmp_path: /tmp
+
