--- a/ansible/test/playbook-test.yaml
+++ b/ansible/test/playbook-test.yaml
@@ -1,5 +1,5 @@
 - name: Deploy Istio on K3s Control Node
-  hosts: k3s_test
+  hosts: k3s_contol_node
 
   vars:
     istio_path: "./istio-{{ istio_version }}"
@@ -8,40 +8,5 @@
     PATH: "{{ istio_path }}/bin:{{ ansible_env.PATH }}"
 
   tasks:
-    - name: Check if Service Exists
-      ansible.builtin.stat: "path={{ k3s_service_path }}"
-      register: k3s_service_status
-
-    - name: Deploy Istio
-      block:
-        - name: Check if Istio Exists
-          kubernetes.core.k8s_info:
-            kind: Pod
-            namespace: istio-system
-          register: k3s_istio_status
-
-        - name: Deploy Istio installation script
-          block:
-            - name: Download Istio
-              ansible.builtin.shell:
-                cmd: curl -L https://istio.io/downloadIstio | sh -
-              environment:
-                ISTIO_VERSION: "{{ istio_version }}"
-
-            - name: Precheck Istio installation
-              ansible.builtin.shell:
-                cmd: istioctl x precheck
-
-            - name: Install Istio
-              ansible.builtin.shell:
-                cmd: istioctl install --set profile=demo -y
-
-            - name: Delete content & directory
-              ansible.builtin.file:
-                state: absent
-                path: "{{ istio_path }}"
-          when: k3s_istio_status.resources is defined and k3s_istio_status.resources|length == 0
-
-      when: k3s_service_status.stat.exists
 
 
