--- a/ansible/playbook-k3s-istio.yaml
+++ b/ansible/playbook-k3s-istio.yaml
@@ -42,4 +42,24 @@
                 path: "{{ istio_path }}"
           when: k3s_istio_status.resources is defined and k3s_istio_status.resources|length == 0
 
+        - name: Define Gateway URL
+          block:
+          - name: Get IngressGateway host
+            ansible.builtin.command: "kubectl -n istio-system get service istio-ingressgateway -o jsonpath='{.status.loadBalancer.ingress[0].ip}'"
+            register: ingress_host
+          - name: Get IngressGateway insecure port
+            ansible.builtin.command: "kubectl -n istio-system get service istio-ingressgateway -o jsonpath='{.spec.ports[?(@.name==\"http2\")].port}'"
+            register: ingress_port
+          - name: Get IngressGateway secured port
+            ansible.builtin.command: "kubectl -n istio-system get service istio-ingressgateway -o jsonpath='{.spec.ports[?(@.name==\"https\")].port}'"
+            register: ingress_secure_port
+
+          - name: Print Insecure IngressGateway URL
+            ansible.builtin.debug:
+              msg: "Insecure IngressGateway URL: http://{{ ingress_host.stdout }}:{{ ingress_port.stdout }}"
+          - name: Print Secure IngressGateway URL
+            ansible.builtin.debug:
+              msg: "Secure IngressGateway URL: https://{{ ingress_host.stdout }}:{{ ingress_secure_port.stdout }}"
+
       when: k3s_service_status.stat.exists
+
