--- a/terraform/istio/resources/tracing-gateway.yaml
+++ b/terraform/istio/resources/tracing-gateway.yaml
@@ -1,7 +1,7 @@
-apiVersion: networking.istio.io/v1alpha3
+apiVersion: networking.istio.io/v1beta1
 kind: Gateway
 metadata:
-  name: prometheus-gateway
+  name: tracing-gateway
   namespace: istio-system
 spec:
   selector:
@@ -9,38 +9,38 @@ spec:
   servers:
     - port:
         number: 443
-        name: https-prom
+        name: https-tracing
         protocol: HTTPS
       tls:
         mode: SIMPLE
-        credentialName: telemetry-gw-cert
+        credentialName: telemetry-gw-secret
       hosts:
-        - "prometheus.${INGRESS_DOMAIN}"
+        - "tracing.${INGRESS_DOMAIN}"
 ---
-apiVersion: networking.istio.io/v1alpha3
+apiVersion: networking.istio.io/v1beta1
 kind: VirtualService
 metadata:
-  name: prometheus-vs
+  name: tracing-vs
   namespace: istio-system
 spec:
   hosts:
-    - "prometheus.${INGRESS_DOMAIN}"
+    - "tracing.${INGRESS_DOMAIN}"
   gateways:
-    - prometheus-gateway
+    - tracing-gateway
   http:
     - route:
         - destination:
-            host: prometheus
+            host: tracing
             port:
-              number: 9090
+              number: 80
 ---
-apiVersion: networking.istio.io/v1alpha3
+apiVersion: networking.istio.io/v1beta1
 kind: DestinationRule
 metadata:
-  name: prometheus
+  name: tracing
   namespace: istio-system
 spec:
-  host: prometheus
+  host: tracing
   trafficPolicy:
     tls:
       mode: DISABLE
