--- a/ansible/inventory.yaml
+++ b/ansible/inventory.yaml
@@ -1,6 +1,6 @@
 k3s_control_node:
   hosts:
-    k3s_test:
+    k3s_server:
       ansible_host: 192.168.64.13
   vars:
     ansible_user: ubuntu
@@ -15,9 +15,9 @@ k3s_control_node:
 
 k3s_worker_nodes:
   hosts:
-    k3s_test_agent:
+    k3s_agent_1:
       ansible_host: 192.168.64.14
-#    k3s_3:
+#    k3s_agent_2:
 #      ansible_host: 192.168.64.15
   vars:
     ansible_user: ubuntu
