--- a/terraform/istio/resources/grafana-gateway.yaml
+++ b/terraform/istio/resources/grafana-gateway.yaml
@@ -1,4 +1,4 @@
-apiVersion: networking.istio.io/v1alpha3
+apiVersion: networking.istio.io/v1beta1
 kind: Gateway
 metadata:
   name: grafana-gateway
@@ -13,11 +13,11 @@ spec:
         protocol: HTTPS
       tls:
         mode: SIMPLE
-        credentialName: telemetry-gw-cert
+        credentialName: telemetry-gw-secret
       hosts:
         - "grafana.${INGRESS_DOMAIN}"
 ---
-apiVersion: networking.istio.io/v1alpha3
+apiVersion: networking.istio.io/v1beta1
 kind: VirtualService
 metadata:
   name: grafana-vs
@@ -34,7 +34,7 @@ spec:
             port:
               number: 3000
 ---
-apiVersion: networking.istio.io/v1alpha3
+apiVersion: networking.istio.io/v1beta1
 kind: DestinationRule
 metadata:
   name: grafana
