--- a/terraform/istio/resources/kiali-gateway.yaml
+++ b/terraform/istio/resources/kiali-gateway.yaml
@@ -1,7 +1,7 @@
-apiVersion: networking.istio.io/v1alpha3
+apiVersion: networking.istio.io/v1beta1
 kind: Gateway
 metadata:
-  name: tracing-gateway
+  name: kiali-gateway
   namespace: istio-system
 spec:
   selector:
@@ -9,38 +9,38 @@ spec:
   servers:
     - port:
         number: 443
-        name: https-tracing
+        name: https-kiali
         protocol: HTTPS
       tls:
         mode: SIMPLE
-        credentialName: telemetry-gw-cert
+        credentialName: telemetry-gw-secret
       hosts:
-        - "tracing.${INGRESS_DOMAIN}"
+        - "kiali.${INGRESS_DOMAIN}"
 ---
-apiVersion: networking.istio.io/v1alpha3
+apiVersion: networking.istio.io/v1beta1
 kind: VirtualService
 metadata:
-  name: tracing-vs
+  name: kiali-vs
   namespace: istio-system
 spec:
   hosts:
-    - "tracing.${INGRESS_DOMAIN}"
+    - "kiali.${INGRESS_DOMAIN}"
   gateways:
-    - tracing-gateway
+    - kiali-gateway
   http:
     - route:
         - destination:
-            host: tracing
+            host: kiali
             port:
-              number: 80
+              number: 20001
 ---
-apiVersion: networking.istio.io/v1alpha3
+apiVersion: networking.istio.io/v1beta1
 kind: DestinationRule
 metadata:
-  name: tracing
+  name: kiali
   namespace: istio-system
 spec:
-  host: tracing
+  host: kiali
   trafficPolicy:
     tls:
       mode: DISABLE
