--- a/ansible/bootstrap.yaml
+++ b/ansible/bootstrap.yaml
@@ -14,6 +14,8 @@
     - pip
 
 - name: Remove swapfile from /etc/fstab
+  become: yes
+  become_method: sudo
   ansible.builtin.mount:
     name: "{{ item }}"
     fstype: swap
@@ -23,5 +25,7 @@
     - none
 
 - name: Disable swap
+  become: yes
+  become_method: sudo
   ansible.builtin.command: swapoff -a
   when: ansible_swaptotal_mb > 0
