--- a/ansible/inventory.yaml
+++ b/ansible/inventory.yaml
@@ -1,7 +1,7 @@
 k3s_control_node:
   hosts:
     k3s_server:
-      ansible_host: 192.168.64.13
+      ansible_host: server.k3s.local
   vars:
     ansible_user: ubuntu
     istio_version: 1.16.1
@@ -16,9 +16,9 @@ k3s_control_node:
 k3s_worker_nodes:
   hosts:
     k3s_agent_1:
-      ansible_host: 192.168.64.14
-#    k3s_agent_2:
-#      ansible_host: 192.168.64.15
+      ansible_host: agent1.k3s.local
+    k3s_agent_2:
+      ansible_host: agent2.k3s.local
   vars:
     ansible_user: ubuntu
     k3s_service_path: /etc/systemd/system/k3s-agent.service
