--- a/ansible/inventory.yaml
+++ b/ansible/inventory.yaml
@@ -1,9 +1,9 @@
 k3s_control_node:
   hosts:
     k3s_server:
-      ansible_host: 192.168.1.31
+      ansible_host: 192.168.50.11
   vars:
-    ansible_user: ubuntu
+    ansible_user: vagrant
     istio_version: 1.16.1
     cluster_cidr: 10.10.0.0/16
     k3s_node_token_path: /var/lib/rancher/k3s/server/node-token
@@ -16,11 +16,11 @@ k3s_control_node:
 k3s_worker_nodes:
   hosts:
     k3s_agent_1:
-      ansible_host: 192.168.1.32
+      ansible_host: 192.168.50.12
     k3s_agent_2:
-      ansible_host: 192.168.1.33
+      ansible_host: 192.168.50.13
   vars:
-    ansible_user: ubuntu
+    ansible_user: vagrant
     k3s_service_path: /etc/systemd/system/k3s-agent.service
     tmp_path: /tmp
 
