Changed strategy. Host IPs will be fed to Vagrant for provider and provisioner to fix IP address

--- a/infra/host_vars/localhost.yaml
+++ b/infra/host_vars/localhost.yaml
@@ -1,5 +1,13 @@
-terraform:
+inventory:
   production:
     environment: "production"
   staging:
     environment: "staging"
+    gateway: 172.16.191.2
+    hosts:
+      - name: node1
+        ip: 172.16.191.51
+      - name: node2
+        ip: 172.16.191.52
+      - name: node3
+        ip: 172.16.191.53
