--- a/infra/vagrant/Vagrantfile
+++ b/infra/vagrant/Vagrantfile
@@ -1,24 +1,28 @@
 require 'yaml'
 
-if (File.exists?(".vagrant/hosts"))
-    current_dir  = File.dirname(File.expand_path(__FILE__))
-    hosts        = YAML.load_file(".vagrant/hosts")
-    puts "Hosts: #{hosts}"
+if (File.exists?(".vagrant/hosts.yaml"))
+    current_dir     = File.dirname(File.expand_path(__FILE__))
+    cfg             = YAML.load_file(".vagrant/hosts.yaml")
+
+    gateway         = cfg["gateway"]
+    environment     = cfg["environment"]
+    hosts           = cfg["hosts"]
 else
-    puts "ERROR: Hosts file .vagrant/hosts does not exist!"
+    puts "ERROR: Hosts file .vagrant/hosts.yaml does not exist!"
     exit 1
 end
 
 Vagrant.configure("2") do |config|
-    config.vm.box = "ubuntu-22.04.1-x86_64"
-
     config.ssh.insert_key = false
     config.ssh.forward_agent = true
     config.vm.synced_folder ".", "/vagrant", id: "vagrant-root", disabled: true
 
-    hosts.each do |name|
+    hosts.each do |host|
+        name = host["name"]
+        ip = host["ip"]
+
         config.vm.define name do |machine|
-            machine.vm.network :private_network
+            machine.vm.box = "ubuntu-22.04.1-x86_64"
             machine.vm.hostname = name
 
             machine.vm.provider "vmware_fusion" do |v|
@@ -33,7 +37,29 @@ Vagrant.configure("2") do |config|
                 s.path = "scripts/bootstrap.sh"
                 s.privileged = false
             end
+            machine.vm.provision "file", source: "scripts/netplan.sh", destination: "/home/vagrant/netplan.sh"
+            machine.vm.provision "netplan", type: "shell" do |s|
+                s.inline = "IP_ADDR=#{ip} GATE=#{gateway} sh netplan.sh"
+                s.privileged = false
+            end
         end
+
+#         config.vm.define name do |machine|
+#             machine.vm.box = "ubuntu-22.04.1-x86_64"
+#             machine.vm.network :private_network, ip: ip
+#             machine.vm.hostname = name
+#
+#             machine.vm.provider "virtualbox" do |vb|
+#                 vb.name = name
+#                 vb.linked_clone = true
+#             end
+#
+#             machine.vm.provision "file", source: "~/.ssh/id_rsa.pub", destination: "/home/vagrant/id_rsa.pub"
+#             machine.vm.provision "ssh_keys", type: "shell" do |s|
+#                 s.path = "scripts/bootstrap.sh"
+#                 s.privileged = false
+#             end
+#         end
     end
 end
 
