--- a/infra/host_vars/localhost.yaml
+++ b/infra/host_vars/localhost.yaml
@@ -3,6 +3,7 @@ inventory:
     environment: "production"
   staging:
     environment: "staging"
+    ssh_host: 172.16.*.*
     gateway: 172.16.191.1
     hosts:
       node1: 172.16.191.51
