--- a/infra/vagrant/Vagrantfile
+++ b/infra/vagrant/Vagrantfile
@@ -4,14 +4,16 @@ if (File.exists?(".vagrant/hosts.yaml"))
     current_dir     = File.dirname(File.expand_path(__FILE__))
     cfg             = YAML.load_file(".vagrant/hosts.yaml")
 
-    gateway         = cfg["gateway"]
-    ssh_host        = cfg["ssh_host"]
+    network_type    = cfg["network"]["type"]
     environment     = cfg["environment"]
     hosts           = cfg["hosts"]
 else
     puts "ERROR: Hosts file .vagrant/hosts.yaml does not exist!"
     exit 1
 end
+
+puts "Creating VMs for environment: " + environment + " ..."
+puts "Configuring network_type: " + network_type + " ..."
 
 Vagrant.configure("2") do |config|
     config.ssh.insert_key = false
@@ -20,7 +22,12 @@ Vagrant.configure("2") do |config|
 
     hosts.each do |name, ip|
         config.vm.define name do |machine|
-            machine.vm.network :private_network
+            if network_type == "public"
+                machine.vm.network :public_network
+            else
+                machine.vm.network :private_network
+            end
+
             machine.vm.hostname = name
             machine.vm.box = "ubuntu-22.04.1-x86_64.vmf"
 
@@ -33,12 +40,10 @@ Vagrant.configure("2") do |config|
                 v.vmx["ethernet1.pcislotnumber"] = "35"
             end
 
-            File.open(".vagrant/env-#{name}.sh", "w") {|f| f.write("export IP_ADDR=#{ip}; export GATE=#{gateway}") }
-
-            machine.vm.provision "file", source: "~/.ssh/id_rsa.pub", destination: "/home/vagrant/id_rsa.pub"
-            machine.vm.provision "file", source: "scripts/bootstrap.sh", destination: "/home/vagrant/bootstrap.sh"
-            machine.vm.provision "file", source: ".vagrant/env-#{name}.sh", destination: "/home/vagrant/env.sh"
-            machine.vm.provision "file", source: "scripts/netplan.sh", destination: "/home/vagrant/netplan.sh"
+            machine.vm.provision "dummy", type: "shell" do |s|
+                s.inline = "Hello Moto"
+                s.privileged = false
+            end
         end
 
 #         config.vm.define name do |machine|
@@ -51,12 +56,10 @@ Vagrant.configure("2") do |config|
 #                 vb.linked_clone = true
 #             end
 #
-#             machine.vm.provision "file", source: "~/.ssh/id_rsa.pub", destination: "/home/vagrant/id_rsa.pub"
-#             machine.vm.provision "ssh_keys", type: "shell" do |s|
-#                 s.path = "scripts/bootstrap.sh"
-#                 s.env =  { SSH_HOST: "#{ssh_host}" }
+#             machine.vm.provision "dummy", type: "shell" do |s|
+#                 s.inline = "Hello Moto"
 #                 s.privileged = false
-#             end
+#              end
 #         end
     end
 end
