--- a/infra/roles/vagrant/tasks/main.yaml
+++ b/infra/roles/vagrant/tasks/main.yaml
@@ -68,7 +68,7 @@
 
 #Runs bootstrap scripts in each VM shell. Reads for Vagrant output assigned IP addresses and reads inventory file
 #to get static IP to be assigned.
-- name: Create Bootstrap remote scripts
+- name: Create bootstrap remote scripts
   template:
     src: templates/bootstrap.j2
     dest: "{{ playbook_dir }}/vagrant/.vagrant/scripts/bootstrap-{{f_name}}.sh"
@@ -96,30 +96,27 @@
 - name: Create upload script
   template:
     src: templates/upload.j2
-    dest: "{{ playbook_dir }}/vagrant/.vagrant/scripts/upload-{{env}}.sh"
+    dest: "{{ playbook_dir }}/vagrant/.vagrant/upload-{{env}}.sh"
     trim_blocks: true
   when: (operation == "bootstrap")
   vars:
     dhcp_ips: "{{ lookup('ansible.builtin.file', 'vagrant/.vagrant/dhcp_ips.yaml') | from_yaml }}"
 
-#- name: Bootstrap VMs
-#  ansible.builtin.shell:
-#    cmd:
-#      echo "export IP_ADDR={{static_ip}}; export GATE={{gateway}}" > ".vagrant/env-{{name}}.sh"
-#
-#      echo "scp -i ~/.vagrant.d/insecure_private_key scripts/bootstrap.sh vagrant@{{dhcp_ip}}:/home/vagrant/" >> ".vagrant/bootstrap-{{env}}.sh"
-#      echo "scp -i ~/.vagrant.d/insecure_private_key scripts/netplan.sh vagrant@{{dhcp_ip}}:/home/vagrant/" >> ".vagrant/bootstrap-{{env}}.sh"
-#      echo "scp -i ~/.vagrant.d/insecure_private_key .vagrant/env-{{name}}.sh vagrant@{{dhcp_ip}}:/home/vagrant/" >> ".vagrant/bootstrap-{{env}}.sh"
-#  when: (operation == "bootstrap")
-#  vars:
-#    name: "{{ item.key }}"
-#    static_ip: "{{ item.value }}"
-#    gateway: "{{ inventory[env].gateway }}"
-#    dhcp_ip: "{{ dhcp_ips[f_name] }}"
-#    f_name: "{{ item.key }}-{{ env }}"
-#    dhcp_ips: "{{ lookup('ansible.builtin.file', 'vagrant/.vagrant/dhcp_ips.yaml') | from_yaml }}"
-#  with_dict: "{{ inventory[env].hosts }}"
-#  args:
-#    chdir: "{{ playbook_dir }}/vagrant"
-#  register: output
-#
+- name: Create test script
+  template:
+    src: templates/test-hosts.j2
+    dest: "{{ playbook_dir }}/vagrant/.vagrant/test-{{env}}.sh"
+    trim_blocks: true
+  when: (operation == "bootstrap")
+  vars:
+    dhcp_ips: "{{ lookup('ansible.builtin.file', 'vagrant/.vagrant/dhcp_ips.yaml') | from_yaml }}"
+
+- name: Create bootstrap all hosts script
+  template:
+    src: templates/bootstrap-hosts.j2
+    dest: "{{ playbook_dir }}/vagrant/.vagrant/bootstrap-hosts-{{env}}.sh"
+    trim_blocks: true
+  when: (operation == "bootstrap")
+  vars:
+    dhcp_ips: "{{ lookup('ansible.builtin.file', 'vagrant/.vagrant/dhcp_ips.yaml') | from_yaml }}"
+
