--- a/infra/host_vars/localhost.yaml
+++ b/infra/host_vars/localhost.yaml
@@ -6,8 +6,8 @@ inventory:
     ssh_host: 172.16.*.*
     gateway: 172.16.191.2
     network:
-      type: "public"
-      interface: "ens35"
+      type: "private"
+      interface: "ens32"
     hosts:
       node1: 172.16.191.51
       node2: 172.16.191.52
